--- a/frontend/src/css/Home.css
+++ b/frontend/src/css/Home.css
@@ -1,1 +1,2 @@
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;200;300;400;500;600;700;800;900&family=Caveat:wght@600&display=swap');
 @import "tailwindcss";
